# uritools

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CHANGES.rst  Changes  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  uritools.py
.github/: SECURITY.md  copilot-instructions.md  copilot-review.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
src/uritools/: __init__.py  __init__.pyi  chars.py  classify.py  compose.py  defrag.py  join.py
tests/: __init__.py  test_classify.py  test_compose.py  test_defrag.py  test_encoding.py  test_join.py  test_split.py  test_unsplit.py  test_uricompose.py  test_uridefrag.py  test_urijoin.py  test_urisplit.py  test_uriunsplit.py  test_urlparse.py  test_urlparse2.py  test_urlparse3.py  urlparse_wrappers.py  wrappers.py
uritools/: __init__.py  chars.py  compose.py  const.py  defrag.py  encoding.py  ipaddress.py  join.py  normpath.py  parse.py  regex.py  split.py  util.py
