[metadata]
name = uritools
version = attr: uritools.__version__
url = https://github.com/tkem/uritools/
author = Thomas Kemmer
author_email = tkemmer@computer.org
license = MIT
license_files = LICENSE
description = URI parsing, classification and composition
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9

[options.packages.find]
where = src

[flake8]
max-line-length = 80
exclude = .git, .tox, build
select = C, E, F, W, B, B950, I, N
# E501: line too long (black)
# W503 line break before binary operator (black)
ignore = E501, W503

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1
